[package]
name = "vrf-client"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vrf_client"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = []
default = ["cpi"]

[dependencies]
anchor-lang = { version = "0.25.0", features = ["init-if-needed"] }
anchor-spl = "^0.25.0"
solana-program = "~1.10.29"
switchboard-v2 = { version = "^0.1.14", features = ["devnet"] }
bytemuck = "1.7.2"
